apps/ngiinx/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
  namespace: links
spec:
  type: ClusterIP

  selector:
    app: nginx-app

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
