apps/ngiinx/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-app
  namespace: links

spec:
  ingressClassName: traefik

  rules:
  - host: nginx.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: nginx-app

            port:
              number: 80
